cloudformation/ECS/infrastructure/load-balancers.yml
AWSTemplateFormatVersion: "2010-09-09"
Description: >
  Resources to create a Load Balancer that exposes the application running
Parameters:
  VpcId:
    Type: AWS::EC2::VPC::Id
    Description: VPC to host the Load Balancer
  SubnetsIds:
    Type: List<AWS::EC2::Subnet::Id>
    Description: Subnet Ids to host the Load Balancer
  CertificateArn:
    Type: String
    Default: ""
    Description: SSL Certificate ARN
  S3BucketLogs:
    Type: String
    Description: S3 bucket to store the load balancer access logs
  StackName:
    Type: String
    Default: demo
    Description: This will be used to name the resources
  Environment:
    Type: String
    Default: Dev
    AllowedValues: [Prod, Stage, Dev]
Conditions:
  SslCertificateArnPresent: !Not [!Equals [!Ref CertificateArn, ""]]
Resources:
  ######### Security Groups #########
  SecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      VpcId: !Ref VpcId
      GroupDescription: Only allow HTTP and HTTPS comunication to the load balancer
      SecurityGroupIngress:
        - { IpProtocol: 6, CidrIp: "0.0.0.0/0", FromPort: 80, ToPort: 80 }
        - { IpProtocol: 6, CidrIp: "0.0.0.0/0", FromPort: 443, ToPort: 443 }
      SecurityGroupEgress:
        - { IpProtocol: -1, CidrIp: "0.0.0.0/0" }
      Tags:
        - Key: Environment
          Value: !Sub ${StackName}-${Environment}
  ########## Load Balancer ##########
  LoadBalancer:
    Type: AWS::ElasticLoadBalancingV2::LoadBalancer
    Properties:
      Scheme: internet-facing
      Type: application
      Subnets: !Ref SubnetsIds
      LoadBalancerAttributes:
        - Key: access_logs.s3.enabled
          Value: true
        - Key: access_logs.s3.bucket
          Value: !Ref S3BucketLogs
      SecurityGroups:
        - !Ref SecurityGroup
      Tags:
        - Key: Environment
          Value: !Sub ${StackName}-${Environment}
  HttpListener:
    Type: AWS::ElasticLoadBalancingV2::Listener
    Properties:
      LoadBalancerArn: !Ref LoadBalancer
      Port: 80
      Protocol: HTTP
      DefaultActions:
        - Type: forward
          TargetGroupArn: !Ref DefaultTargetGroup
  # Conditioned if SSL Certificate is passed
  HttpsListener:
    Type: AWS::ElasticLoadBalancingV2::Listener
    Condition: SslCertificateArnPresent
    Properties:
      LoadBalancerArn: !Ref LoadBalancer
      Port: 443
      Protocol: HTTPS
      Certificates:
        - CertificateArn: !Ref CertificateArn
      DefaultActions:
        - Type: forward
          TargetGroupArn: !Ref DefaultTargetGroup
  DefaultTargetGroup:
    Type: AWS::ElasticLoadBalancingV2::TargetGroup
    Properties:
      VpcId: !Ref VpcId
      Port: 80
      Protocol: HTTP
      Tags:
        - Key: Name
          Value: DefaultTargetGroup
        - Key: Environment
          Value: !Sub ${StackName}-${Environment}

    # Type: AWS::ElasticLoadBalancingV2::TargetGroup
    # Properties:
    #   HealthCheckIntervalSeconds: 20
    #   HealthCheckPath: /health
    #   HealthCheckProtocol: HTTP
    #   HealthCheckTimeoutSeconds: 10
    #   HealthyThresholdCount: 3
    #   Matcher:
    #     HttpCode: '200'
    #   Port: !Ref ContainerPort
    #   Protocol: HTTP
    #   TargetGroupAttributes:
    #     - Key: deregistration_delay.timeout_seconds
    #       Value: '60'
    #     - Key: stickiness.enabled
    #       Value: 'true'
    #     - Key: stickiness.type
    #       Value: lb_cookie
    #     - Key: stickiness.lb_cookie.duration_seconds
    #       Value: '300'
    #   UnhealthyThresholdCount: 3
    #   VpcId: !Ref VpcId
    #   Tags:
    #     - Key: LoadBalancerName
    #       Value: !Ref LoadBalancerName
    #     - Key: VpcId
    #       Value: !Ref VpcId
    #     - Key: StackName
    #       Value: !Sub ${StackName}-${Environment}

Outputs:
  CanonicalHostedZoneID:
    Description: Canonical Hosted Zone ID
    Value: !GetAtt LoadBalancer.CanonicalHostedZoneID
  HttpListenerArn:
    Description: HTTP Listener ARN
    Value: !Ref HttpListener
  # Conditioned if SSL Certificate is passed
  HttpsListenerArn:
    Description: HTTPS Listener ARN
    Value: !Ref HttpsListener
    Condition: SslCertificateArnPresent
  LoadBalancerArn:
    Description: Load Balancer ARN
    Value: !Ref LoadBalancer
  LoadBalancerDomain:
    Description: Load Balancer Domain
    Value: !GetAtt LoadBalancer.DNSName
  LoadBalancerName:
    Description: Load Balancer Name
    Value: !GetAtt LoadBalancer.LoadBalancerName
  SecurityGroupId:
    Description: Load Balancer Security Group ID
    Value: !Ref SecurityGroup
